# hypermvp

./: .env  .gitignore  .python-version  CONFIGS.md  README.md  config.py  configs-overview.md  hypermvp.code-workspace  main.py  pyproject.toml  requirements.txt  settings.json  setup.py  setup.sh  test_duckdb_excel.py  test_query_duckdb.py  test_workflow.py
.github/: copilot-instructions.md
.github/workflows/: test.yml
data/: beispiel.xlsx  filtered_negative_50hertz.csv  test_processed_data.duckdb
data/01_raw/: provider_list_2024_09_01.xlsx
data/01_raw/afrr/: afrr_2024-01.csv  afrr_2024-02.csv  afrr_2024-03.csv  afrr_2024-04.csv  afrr_2024-05.csv  afrr_2024-06.csv  afrr_2024-07.csv  afrr_2024-08.csv  afrr_2024-09.csv  afrr_2024-10.csv  afrr_2024-11.csv  afrr_2024-12.csv
data/02_processed/: cleaned_test_afrr_2024_09_20250217_010119.csv  example_afrr.duckdb  provider_cleaned_20250222_190811.csv  provider_data.duckdb  provider_list_2024_09_01.csv
data/03_output/: marginal_prices_2024-09-01.csv  provider_data.duckdb
data/03_output/duckdb/: afrr_data.duckdb  (+1 more)
data/04_database/: test.duckdb  test_two_sheets.duckdb
data/test_raw/: sample_provider_data.xlsx  testdata_aFRR_sept.csv
documentation/: algorith docu  datetimestandard.md  functional documentation.md  progress_log.md  technical documentation.md
documentation/architecture-review-april13/: architecture-findings.md  architecture-review-plan.md
documentation/dev-instructions/: US001-provider_table_cleaner.md  copilot-instructions.md  epic_overview.md  progress-etl-business.md  scraper-development-plan.md
documentation/user-guide/: DuckDB-Analysis.md  Import-to-Database.md
provider/: cleaner.py
scripts/: __init__.py  check_provider_data.py  loader.py  preview_excel.py  provider_data_cleaner.py
src/: config.py  main.py
src/afrr/: cleaner.py  dumper.py
src/hypermvp/: CONFIGS.md  config.py  config_index.py
src/provider/: cleaner.py  date_conv_debug.py  loader.py  merger.py
testenv/: pyvenv.cfg
tests/: test_afrr_cleaner.py  test_loader.py  test_provider_cleaning.py  tests_config.py
tests/afrr/: test_afrr_cleaner.py  test_afrr_dumper.py  test_afrr_loader.py  test_save_to_duckdb.py
tests/provider/: create_test_data.py  create_test_excel.py  test_cli.py  test_data.xlsx  test_dump_csv.py  test_etl.py  test_extractor.py  test_loader.py  test_progress.py  test_provider.duckdb  test_provider_cleaner.py  test_provider_cli.py  test_provider_db_cleaner.py  test_provider_loader.py  test_provider_merger.py  test_save_to_duckdb.py  test_update_provider_data.py  test_validators.py
tests/scrapers/: test_afrr_scraper.py  test_provider_scraper.py
tests/utils/: test_db_versioning.py
tests_data/processed/: asd.txt  cleaned_test_afrr_20250112_173756.csv  test_file.txt
tools/: print_excel_preview.py  reduce_excel.py  reduce_to_one_sheet.py
(+77 files in other folders)
