[project]
name = "hypermvp"
version = "0.1.0"
description = ""
authors = [
    {name = "Philipp Hilbert", email = "philipp@hyperion-grid.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
et-xmlfile = "2.0.0"
numpy = "2.1.3"
openpyxl = "3.1.5"
pandas = "2.2.3"
pytest = "7.1.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
six = "1.16.0"
tzdata = "2024.2"
duckdb = "0.7.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
