[tool.poetry]
name = "hypermvp"
version = "0.1.0"
description = "Data Analysis of the German Energy Market"
authors = ["Philipp Hilbert <philipp@hyperion-grid.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
et-xmlfile = "2.0.0"
numpy = "2.1.3"
openpyxl = "3.1.5"
pandas = "^2.2.3"
pytest = "7.1.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
six = "1.16.0"
tzdata = "2024.2"
duckdb = "1.2.0"
flake8 = "^6.0.0"
black = "^23.0.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
beautifulsoup4 = "^4.13.3"

[tool.poetry.group.dev.dependencies]
responses = "^0.25.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
exclude = '''
/(
    \.venv
    | venv
    | env
    | \.git
    | __pycache__
)/
'''

[tool.flake8]
max-line-length = 88
exclude = ".venv,venv,env,__pycache__,.git"
select = ["E", "F", "W"]