[tool.poetry]
name = "hypermvp"
version = "0.1.0"
description = "Data Analysis of the German Energy Market"
authors = ["Philipp Hilbert <philipp@hyperion-grid.com>"]
readme = "README.md"
packages = [
    { include = "hypermvp", from = "src" }
]

[tool.poetry.dependencies]
python = "3.12.8"
et-xmlfile = "2.0.0"
numpy = "2.1.3"
openpyxl = "3.1.5"
pandas = "^2.2.3"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
six = "1.16.0"
tzdata = "2024.2"
duckdb = "^1.2.1"
flake8 = "^6.0.0"
black = "^23.0.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
beautifulsoup4 = "^4.13.3"
streamlit = "^1.34.0"
plotly = "^5.20.0"
psutil = "^5.9.0"
tqdm = "^4.66.0"
polars = {version = "^0.20.16", extras = ["excel"]}
fastexcel = "^0.13.0"
jupyterlab = "^4.0.0"
jupysql = "^0.10.0"
duckdb-engine = "^0.9.0"
rich = "^13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.0"
responses = "^0.25.7"

[tool.poetry.scripts]
run-dashboard = "hypermvp.dashboard.run:run_dashboard"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
exclude = '''
/(
    \.venv
    | venv
    | env
    | \.git
    | __pycache__
)/
'''

[tool.flake8]
max-line-length = 88
exclude = ".venv,venv,env,__pycache__,.git"
select = ["E", "F", "W"]